Rewrite of VOTable writing code.  As well as doing TABLEDATA output, the VOTableWriter can now be configured to serialize to a BINARY or FITS format STREAM element, with the actual data either inline (base64) or to an external file/stream.